[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/monsters/zombi.png" type="Texture" id=1]
[ext_resource path="res://scripts/monsters/zombi.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 2.0

[node name="zombi" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="TimerDir" type="Timer" parent="."]
autostart = true

[node name="testFront" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )

[node name="vision" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="vision"]
position = Vector2( -0.707123, 0.530331 )
polygon = PoolVector2Array( -5, -10, -5, 10, 100, 50, 130, 0, 100, -50 )

[connection signal="timeout" from="TimerDir" to="." method="_on_TimerDir_timeout"]
[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="vision" to="." method="_on_vision_body_exited"]
